--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
                 CSCE 190: Tyler Korth
             </title>
 
-            <h1>Tyler Korth's CSCE 190 Site</h1>
+            <h1 style="color:blueviolet">Tyler Korth's CSCE 190 Site</h1>
+            <p>I'm excited to learn!</p>
     </body>
 
 
