--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
 
             <h1 style="color:blueviolet">Tyler Korth's CSCE 190 Site</h1>
             <p>I'm excited to learn!</p>
+    
+    <section class="assignment">
+            <a href="files/Problem Statement.pdf"><img src="images/190image.jpeg" width="500" length="300"></a>
+                <section class="ass-details">
+                <a href="files/Problem Statement.pdf"><h2>Problem Statement: Gym</h2></a>
+                    <p>
+                    There are two on campus gyms for students to exercise at. However, these gyms seem to be constantly packed no matter when you go.   
+                    </p>
+                </section>
+    </section>
     </body>
 
 
