--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
             <p>I'm excited to learn!</p>
     
     <section class="assignment">
-            <a href="files/Problem Statement.pdf"><img src="images/190image.jpeg" width="500" length="300"></a>
+            <a href="files/Problem Statement CSCE 190.pdf"><img src="images/190image.jpeg" width="500" length="300"></a>
                 <section class="ass-details">
-                <a href="files/Problem Statement.pdf"><h2>Problem Statement: Gym</h2></a>
+                <a href="files/Problem Statement CSCE 190.pdf.pdf"><h2>Problem Statement: Gym</h2></a>
                     <p>
                     There are two on campus gyms for students to exercise at. However, these gyms seem to be constantly packed no matter when you go.   
                     </p>
