--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             <p>I'm excited to learn!</p>
     
     <section class="assignment">
-            <a href="files/Problem Statement CSCE 190.pdf"><img src="files/New Statement.png" width="500" length="300"></a>
+            <a href="files/Problem Statement CSCE 190.pdf"><img src="images/New Statement.png" width="500" length="300"></a>
                 <section class="ass-details">
                 <a href="files/Problem Statement CSCE 190.pdf.pdf"><h2>Problem Statement: Gym</h2></a>
                     <p>
