--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
             <h1 style="color:blueviolet">Tyler Korth's CSCE 190 Site</h1>
             <p>I'm excited to learn!</p>
     
+            <!--Problem Statement Assignment-->
     <section class="assignment">
-            <a href="files/Problem Statement CSCE 190.pdf"><img src="images/new statement.png" width="500" length="300"></a>
+            <a href="files/Problem Statement CSCE 190.pdf"><img src="images/new statement.png" width="350" length="350"></a>
                 <section class="ass-details">
                 <a href="files/Problem Statement CSCE 190.pdf.pdf"><h2>Problem Statement: Gym</h2></a>
                     <p>
@@ -17,7 +18,17 @@
                     </p>
                 </section>
     </section>
+
+            <!--Affinity Diagram-->
+    <section class="assignment">
+            <a href="files/diagram.pdf"><img src="images/diagram.png" width="350" length="350"></a>
+                <section class="ass-details">
+                 <a href="files/diagram.pdf"><h2>Affinity Diagram: Gym</h2></a>
+                    <p>
+                    Together, my group and I came up with many ideas for our problem.
+                    </p>
+                </section>
+    </section>
+
     </body>
-
-
 </html>
