--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
             </title>
 
             <h1 style="color:blueviolet">Tyler Korth's CSCE 190 Site</h1>
-            <p>I'm excited to learn!</p>
     
             <!--Problem Statement Assignment-->
     <section class="assignment">
@@ -21,9 +20,9 @@
 
             <!--Affinity Diagram-->
     <section class="assignment">
-            <a href="files/diagram.pdf"><img src="images/diagram.png" width="350" length="350"></a>
+            <a href="files/diagram2.pdf"><img src="images/diagram.png" width="350" length="350"></a>
                 <section class="ass-details">
-                 <a href="files/diagram.pdf"><h2>Affinity Diagram: Gym</h2></a>
+                 <a href="files/diagram2.pdf"><h2>Affinity Diagram: Gym</h2></a>
                     <p>
                     Together, my group and I came up with many ideas for our problem.
                     </p>
