--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
     <body>
+        <link rel="stylesheet" href="style.css">
             <title>
                 CSCE 190: Tyler Korth
             </title>
 
-            <h1 style="color:blueviolet">Tyler Korth's CSCE 190 Site</h1>
+            <h1>Tyler Korth's CSCE 190 Site</h1>
     
             <!--Problem Statement Assignment-->
     <section class="assignment">
