--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
             <!--Problem Statement Assignment-->
     <section class="assignment">
-            <a href="files/Problem Statement CSCE 190.pdf"><img src="images/new statement.png" width="350" length="350"></a>
+            <a href="files/Problem Statement CSCE 190.pdf"><img src="images/new statement.png"></a>
                 <section class="ass-details">
                 <a href="files/Problem Statement CSCE 190.pdf.pdf"><h2>Problem Statement: Gym</h2></a>
                     <p>
@@ -21,7 +21,7 @@
 
             <!--Affinity Diagram-->
     <section class="assignment">
-            <a href="files/diagram2.pdf"><img src="images/diagram.png" width="350" length="350"></a>
+            <a href="files/diagram2.pdf"><img src="images/diagram.png"></a>
                 <section class="ass-details">
                  <a href="files/diagram2.pdf"><h2>Affinity Diagram: Gym</h2></a>
                     <p>
@@ -29,6 +29,15 @@
                     </p>
                 </section>
     </section>
-
+            <!--Persona-->
+    <section class="assignment">
+        <a href="files/persona.pdf"><img src="images/persona6.png"></a>
+            <section class="ass-details">
+             <a href="files/persona.pdf"><h2>Persona: 4 personas for gym.</h2></a>
+                <p>
+                The personas of the people who would want to go the gym using gym finder app.
+                </p>
+            </section>
+</section>
     </body>
 </html>
