--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <section class="assignment">
         <a href="files/persona.pdf"><img src="images/persona6.png"></a>
             <section class="ass-details">
-             <a href="files/persona.pdf"><h2>Persona: 4 personas for gym.</h2></a>
+             <a href="files/persona.pdf"><h2>Persona: 4 personas for gym</h2></a>
                 <p>
                 The personas of the people who would want to go the gym using gym finder app.
                 </p>
