--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <section class="assignment">
             <a href="files/Problem Statement CSCE 190.pdf"><img src="images/new statement.png"></a>
                 <section class="ass-details">
-                <a href="files/Problem Statement CSCE 190.pdf.pdf"><h2>Problem Statement: Gym</h2></a>
+                <a href="files/Problem Statement CSCE 190.pdf"><h2>Problem Statement: Gym</h2></a>
                     <p>
                     There are two on campus gyms for students to exercise at. However, these gyms seem to be constantly packed no matter when you go.   
                     </p>
