--- a/index.html
+++ b/index.html
@@ -39,5 +39,15 @@
                 </p>
             </section>
 </section>
+            <!--Storyboard-->
+      <section class="assignment">
+              <a href="files/story.pdf"><img src="images/mystory.png"></a>
+                <section class="ass-details">
+                <a href="files/story.pdf"><h2>Storyboard: 4 stories</h2></a>
+                     <p>
+                     These are the stories of four people who go to the gym and want to find a good time to go.
+                    </p>
+                 </section>
+        </section>
     </body>
 </html>
