--- a/index.html
+++ b/index.html
@@ -49,5 +49,16 @@
                     </p>
                  </section>
         </section>
+
+            <!--Sketch-->
+            <section class="assignment">
+                <a href="files/combinesketch.pdf"><img src="images/sketch.png"></a>
+                  <section class="ass-details">
+                  <a href="files/combinesketch.pdf"><h2>Sketches:</h2></a>
+                       <p>
+                       Four different ideas of the phone app for Gym Finder App.
+                      </p>
+                   </section>
+          </section>
     </body>
 </html>
