--- a/index.html
+++ b/index.html
@@ -60,5 +60,16 @@
                       </p>
                    </section>
           </section>
+
+
+
+                      <!--prototyope-->
+                      <section class="assignment">
+                        <a href="files/prot/src/index.html"><h2>Prototyope: Gym Finder App</h2></a>
+                            <a href="files/prot/src/index.html"><img src="images/protopic.png"></a>
+                               <p>
+                               How to use the gym finder app.
+                              </p>
+                  </section>
     </body>
 </html>
