--- a/class/aug29/index.html
+++ b/class/aug29/index.html
@@ -1,1 +1,39 @@
-hello there
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <title>Markers</title>
+    <link rel="stylesheet" href="styles.css">
+
+
+</head>
+<body>
+    <h1>I love Marker colors</h1>
+    <h2>Sub title</h2>
+
+    <p>I <strong>love</strong> paragraphs</p>
+    <a href="../../index.html">Back to Main Page</a>
+    <a href="about.html">About</a>
+
+    <table>
+        <tr>
+            <th>mood</th>
+            <th>color</th>
+        </tr>
+        <tr>
+            <td>angry</td>
+            <td>red</td>
+        </tr>
+        <tr>
+            <td>happy</td>
+            <td>green</td>
+        </tr>
+        <tr>
+            <td>sad</td>
+            <td>blue</td>
+        </tr>
+    </table>
+    <a href ="https://www.markersupply.com/">More about markers</a>
+</body>
+
+</html>
