added assignment 1 hw

--- a/assignments/assignment1/index.html
+++ b/assignments/assignment1/index.html
@@ -69,6 +69,12 @@
             <td>Australia and New Guinea</td>
         </tr>
     </table>
+    <a href ="https://www.trvst.world/biodiversity/bird-facts/">Learn more about bird facts!</a>
+    <br>
+    <a href ="https://www.allaboutbirds.org/guide/browse/shape#">Learn more about different types of birds</a>
+
+
+    <a href="../../index.html"><h1>Return Home</h1></a>
 </body>
 
 </html>
