--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 
     <h2>Assignment 1:</h2>
     <a href="https://Tyler987.github.io/assignments/assignment1/index.html"><li>Basic HTML:</li></a>
+    <a href="../Tyler987.github.io/assignments/assignment1/index.html"><li>Basic HTML:</li></a>
+    <a href="../../../index.html"><li>Basic HTML:</li></a>
+    <li><a href ="/assignments/assignment1/index.html">new one</a></li>
 </body>
 
 </html>
