--- a/index.html
+++ b/index.html
@@ -2,22 +2,31 @@
 <html lang="en">
 
 <head>
+
     <title>Tyler Korth CSCE 242</title>
     <link rel="stylesheet" href="styles.css">
 
 
 </head>
 <body>
+    <div id="practice">
     <h1>Welcome to Web Applications CSCE 242!</h1>
+    <nav id="italic-stuff">
     <h1>By Tyler Korth</h1>
+    </nav>
     <p>In this class we are working on web applications using git, github and Visual Studio code!</p>
-    <br>
 
-    <h2>Assignment 1:</h2>
-    <a href="https://Tyler987.github.io/assignments/assignment1/index.html"><li>Basic HTML:</li></a>
-    <a href="../Tyler987.github.io/assignments/assignment1/index.html"><li>Basic HTML:</li></a>
-    <a href="../../../index.html"><li>Basic HTML:</li></a>
-    <li><a href ="/assignments/assignment1/index.html">new one</a></li>
+
+    <h3>Links to different definitions throughout the semester:</h3>
+    <nav id="special-typo">
+    <li><a href ="https://www.google.com/search?q=what+is+computer+science&rlz=1C1UEAD_enUS1051US1051&oq=what+is+computer+science&aqs=chrome..69i57j0i512l9.4432j0j7&sourceid=chrome&ie=UTF-8">Computer Science</a></li>
+    </nav>
+
+    <h2>Assignments:</h2>
+
+    <li><a href ="assignments/assignment1/index.html">Basic HTML</a></li>
+    <li><a href ="assignments/assignment1/assignment2/index.html">Basic CSS</a></li>
+    </div>
 </body>
 
 </html>
