--- a/assignments/assignment1/assignment2/index.html
+++ b/assignments/assignment1/assignment2/index.html
@@ -13,6 +13,7 @@
     <h1>Welome to assignment 2</h1>
     <!--four redirect links-->
     <!--5x5 table-->
+    <h2>Lets get to know some of my top five favorite foods!</h2>
     <table>
         <tr>
             <th>Rank</th>
@@ -57,10 +58,19 @@
             <td>Greece</td>
         </tr>
     </table>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec elementum nisi et lacus pharetra, ut vestibulum nulla consectetur. Suspendisse vitae eros dolor. Donec sed erat purus. Curabitur non vulputate arcu, id sollicitudin sem. Praesent lobortis elit quis ex rhoncus euismod. Vestibulum pellentesque eros at commodo bibendum. Mauris interdum ante magna, a elementum magna tincidunt ut. Sed eu hendrerit augue. Integer convallis et eros et mollis. Donec sed consequat erat.
+    </p>
+    <p>
+        Phasellus pulvinar volutpat nibh, vel cursus purus maximus ac. Nam nec sagittis nunc. Morbi nec ante a est varius hendrerit. Mauris vulputate, massa vel volutpat facilisis, felis turpis cursus magna, non vestibulum lacus velit non lectus. Donec risus orci, mollis in nulla euismod, auctor ullamcorper sapien. Mauris in porta nisl. Pellentesque sem enim, fermentum eu elit vitae, mollis cursus quam.
+    </p>
     
-
+    <img src="pizzap.jpg" alt="pizza">
+    <img src="hamburgerp.jpg" alt="hamburger">
     <a href="../../../index.html"><h1>Return Home</h1></a>
-
+    <a href ="aboutme/index.html"><h1>About me</h1></a>
+    <a href ="contact/index.html"><h1>Contact me</h1></a>
+    <a href ="pictures/index.html"><h1>Pictures</h1></a>
     </body>
     </html>
 
