--- a/assignments/assignment1/assignment2/index.html
+++ b/assignments/assignment1/assignment2/index.html
@@ -9,6 +9,7 @@
 
 </head>
 <body>
+    <div class="clean-class">
     <!--introducing user and random text paragraphs-->
     <h1>Welome to assignment 2</h1>
     <!--four redirect links-->
@@ -67,10 +68,16 @@
     
     <img src="pizzap.jpg" alt="pizza">
     <img src="hamburgerp.jpg" alt="hamburger">
-    <a href="../../../index.html"><h1>Return Home</h1></a>
-    <a href ="aboutme/index.html"><h1>About me</h1></a>
-    <a href ="contact/index.html"><h1>Contact me</h1></a>
-    <a href ="pictures/index.html"><h1>Pictures</h1></a>
+    <br>
+    <h3><strong>The Portal:</strong></h3>
+    <a href="../../../index.html">Return Home</a>
+    <br>
+    <a href ="aboutme/index.html">About me</a>
+    <br>
+    <a href ="contact/index.html">Contact me</a>
+    <br>
+    <a href ="pictures/index.html">Pictures</a>
+</div>
     </body>
     </html>
 
