--- a/assignments/assignment1/index.html
+++ b/assignments/assignment1/index.html
@@ -9,6 +9,7 @@
 <!--Dr. Plante has the best CSCE class-->
 </head>
 <body>
+    <div id="practice">
     <!--introducing user and random text paragraphs-->
     <h1>THE BIGGEST BIRD</h1>
     <p>Halten angeht loffel da hellen pfeife andern es.
@@ -72,9 +73,11 @@
     <a href ="https://www.trvst.world/biodiversity/bird-facts/">Learn more about bird facts!</a>
     <br>
     <a href ="https://www.allaboutbirds.org/guide/browse/shape#">Learn more about different types of birds</a>
+<br>
 
-
-    <a href="../../index.html"><h1>Return Home</h1></a>
+    
+    <a href="../../index.html">Return Home</a>
+    </div>
 </body>
 
 </html>
