webpage setup yay

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
 </head>
 <body>
+
+
     <div id="practice">
     <h1>Welcome to Web Applications CSCE 242!</h1>
     <nav id="italic-stuff">
@@ -26,6 +28,7 @@
 
     <li><a href ="assignments/assignment1/index.html">Basic HTML</a></li>
     <li><a href ="assignments/assignment1/assignment2/index.html">Basic CSS</a></li>
+    <li><a href="assignments/assignment3/index.html">Webpage Setup</a></li>
     </div>
 </body>
 
