pictures and text

--- a/assignments/assignment3/index.html
+++ b/assignments/assignment3/index.html
@@ -21,7 +21,7 @@
         <div class="box1">
             <h2>Box 1</h2>
             <div>
-                <p>content</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor odio leo, pretium blandit enim lobortis quis. Nulla eu congue.</p>
             </div>
         </div>
         <div class="box2">
@@ -79,21 +79,21 @@
         <div class="custom-box">
 
             <div class="bottom-boxes">
-                <h2>image</h2>
+                <img id="logo" src="https://place-hold.it/300x100/FFF">
             </div>
         </div>
     
         <div class="custom-box">
 
             <div class="bottom-boxes">
-                <h2>image</h2>
+                <img id="logo" src="https://place-hold.it/300x100/FFF">
             </div>
         </div>
     
         <div class="custom-box">
 
             <div class="bottom-boxes">
-                <h2>image</h2>
+                <img id="logo" src="https://place-hold.it/300x100/FFF">
             </div>
         </div>
     </div>
