--- a/class/sept7/index.html
+++ b/class/sept7/index.html
@@ -42,7 +42,7 @@
             </h3>
             <hr>
 
-            <div class="clex-container">
+            <div class="flex-container">
                 <ul>
                     <li><a href='#'>Home</a></li>
                     <li><a href='#'>About</a></li>
