--- a/assignments/assignment5/index.html
+++ b/assignments/assignment5/index.html
@@ -65,12 +65,27 @@
 </div>
 </div>
 <div class="main2">
-
+<!---Filler-->
 
 </div>
-
+<div>
 <div class="main3">
+ <!---Background is a image-->
+</div>
+<div id="center-box" >
+    <h1>RESEARCH AT SOUTH CAROLINA</h1>
 
+</div>
+<div class="main4">
+
+    
+    <h2>Research is a learning tool of the highest order at the University of South Carolina. 
+        <br>Discovery allows us to illuminate history, contextualize the present, and help plan for what’s to come.</h2>
+    <br>
+
+    <p>Scientific research, scholarship and creative activity abound throughout USC. <br>That focused presence within nearly all colleges, departments and campuses of the state’s 
+        <br>flagship university is one reason Carnegie Foundation has designated South Carolina as an institution of very high research activity.</p>
+</div>
 </div>
 <div id="main-footer" class ="flex-container">
     <section class="col1of2">
