photo main page

--- a/assignments/assignment5/index.html
+++ b/assignments/assignment5/index.html
@@ -87,6 +87,46 @@
         <br>flagship university is one reason Carnegie Foundation has designated South Carolina as an institution of very high research activity.</p>
 </div>
 </div>
+
+<div class="main5">
+    <section id="sideimg"></section>
+    <section id="sidetxt">
+        <h1>SOUTH CAROLINA</h1>
+    </section>
+</div>
+
+<div class="main5">
+
+    <section id="sidetxt">
+        <h1>SOUTH CAROLINA</h1>
+    </section>
+    <section id="sideimg"></section>
+</div>
+
+
+<div class="main6">
+    <section id="left-section">
+        <img id="logoleft" src="https://place-hold.it/250x250/FFF">
+
+
+    </section>
+    <section id="right-section">
+        <h1>CONTENT</h1>
+        <!-- Add more content to make the section longer -->
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <p>More content...</p>
+    </section>
+</div>
+</div>
+
+
+
+
+
+
+
+
+
 <div id="main-footer" class ="flex-container">
     <section class="col1of2">
         <img id="logo" src="https://place-hold.it/75x75/FFF"><span
