--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="inner-box">   
                  <a href ="assignments/assignment5/index.html"><h4>Assignment 5</h4></a>
             </div>
-            <div class="inner-box"><img id="logo" src="https://place-hold.it/300x150/FFF"></div>
+            <div class="inner-box"> <img src="assignment5.jpg" alt="assignment 5"></div>
             <div class="inner-box">In assignment 5 we recreate a University of South Carolina- Columbia webpage. We are doing this to practice recreating something someone might want.</div>
         </div>
     </div>
