--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="inner-box">   
                      <a href ="assignments/assignment1/index.html"><h4>Assignment 1</h4></a>
                 </div>
-                <div class="inner-box"> <img src="assignment1pic.jpg" alt="assignment 1"></div>
+                <div class="inner-box"> <a href ="assignments/assignment1/index.html"> <img src="assignment1pic.jpg" alt="assignment 1"></a></div>
                 <div class="inner-box">In Assignment one I learn to use basic HTML</div>
             </div>
 
@@ -33,7 +33,7 @@
                 <div class="inner-box">   
                     <a href ="assignments/assignment1/assignment2/index.html"><h4>Assignment 2</h4></a>
                 </div>
-                <div class="inner-box"> <img src="assignment2pic.jpg" alt="assignment 2"></div>
+                <div class="inner-box"><a href ="assignments/assignment1/assignment2/index.html"> <img src="assignment2pic.jpg" alt="assignment 2"></a></div>
                 <div class="inner-box">In assignment 2 I learn to use basic CSS</div>
 
 
@@ -42,7 +42,7 @@
                 <div class="inner-box">
                     <a href="assignments/assignment3/index.html"><h4>Assignment 3</h4></a>
                 </div>
-                <div class="inner-box"> <img src="assignment3pic.jpg" alt="assignment 3"></div>
+                <div class="inner-box"> <a href="assignments/assignment3/index.html"><img src="assignment3pic.jpg" alt="assignment 3"></a></div>
                 <div class="inner-box">In assignment 3 I recreate a specific look for a webpage while practicing using flexbox for smaller resolutions</div>
             </div>
 
@@ -59,7 +59,7 @@
             <div class="inner-box">   
                  <a href ="assignments/assignment5/index.html"><h4>Assignment 5</h4></a>
             </div>
-            <div class="inner-box"> <img src="assignment5.jpg" alt="assignment 5"></div>
+            <div class="inner-box"> <a href ="assignments/assignment5/index.html"><img src="assignment5.jpg" alt="assignment 5"></a></div>
             <div class="inner-box">In assignment 5 we recreate a University of South Carolina- Columbia webpage. We are doing this to practice recreating something someone might want.</div>
         </div>
     </div>
