--- a/assignments/assignment2/index.html
+++ b/assignments/assignment2/index.html
@@ -70,7 +70,7 @@
     <img src="hamburgerp.jpg" alt="hamburger">
     <br>
     <h3><strong>The Portal:</strong></h3>
-    <a href="../../../index.html">Return Home</a>
+    <a href="../../index.html">Return Home</a>
     <br>
     <a href ="aboutme/index.html">About me</a>
     <br>
