--- a/assignments/assignment2/contact/index.html
+++ b/assignments/assignment2/contact/index.html
@@ -3,13 +3,13 @@
 <html lang="en">
 
 <head>
-    <title>About Me</title>
+    <title>Contact Me</title>
     <link rel="stylesheet" href="styles.css">
 
 
 </head>
 <body>
-    <a href="../../../../index.html"><h1>Return Home</h1></a>
+    <a href="../../../index.html"><h1>Return Home</h1></a>
     <a href="../../assignment2/index.html"><h1>Basic CSS</h1></a>
 
     </body>
