--- a/assignments/assignment2/pictures/index.html
+++ b/assignments/assignment2/pictures/index.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-    <a href="../../../../index.html"><h1>Return Home</h1></a>
+    <a href="../../../index.html"><h1>Return Home</h1></a>
     <a href="../../assignment2/index.html"><h1>Basic CSS</h1></a>
     </body>
     </html>
