--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 
             <div class="box">
                 <div class="inner-box">   
-                    <a href ="assignments/assignment1/assignment2/index.html"><h4>Assignment 2</h4></a>
+                    <a href ="assignments/assignment2/index.html"><h4>Assignment 2</h4></a>
                 </div>
-                <div class="inner-box"><a href ="assignments/assignment1/assignment2/index.html"> <img src="assignment2pic.jpg" alt="assignment 2"></a></div>
+                <div class="inner-box"><a href ="assignments/assignment2/index.html"> <img src="assignment2pic.jpg" alt="assignment 2"></a></div>
                 <div class="inner-box">In assignment 2 I learn to use basic CSS</div>
 
 
@@ -62,6 +62,19 @@
             <div class="inner-box"> <a href ="assignments/assignment5/index.html"><img src="assignment5.jpg" alt="assignment 5"></a></div>
             <div class="inner-box">In assignment 5 we recreate a University of South Carolina- Columbia webpage. We are doing this to practice recreating something someone might want.</div>
         </div>
+
+
+        <div class="box">
+            <div class="inner-box">   
+                 <a href ="assignments/assignment6/index.html"><h4>Assignment 6</h4></a>
+            </div>
+            <div class="inner-box"> <a href ="assignments/assignment6/index.html"><img src="assignment6.jpg" alt="assignment 6"></a></div>
+            <div class="inner-box">In assignment 5 we recreate a University of South Carolina- Columbia webpage. We are doing this to practice recreating something someone might want.</div>
+        </div>
+    </div>
+
+
+
     </div>
     </content>
 
