--- a/index.html
+++ b/index.html
@@ -69,7 +69,22 @@
                  <a href ="assignments/assignment6/index.html"><h4>Assignment 6</h4></a>
             </div>
             <div class="inner-box"> <a href ="assignments/assignment6/index.html"><img src="assignment6.jpg" alt="assignment 6"></a></div>
-            <div class="inner-box">In assignment 5 we recreate a University of South Carolina- Columbia webpage. We are doing this to practice recreating something someone might want.</div>
+            <div class="inner-box">In assignment 6, I learn to use buttons, animations, hide items and to show inputs from the user using javascript</div>
+
+
+        </div>
+
+
+
+        <div class="box">
+            <div class="inner-box">   
+                 <a href ="assignments/assignment7/index.html"><h4>Assignment 7</h4></a>
+            </div>
+            <div class="inner-box"> <a href ="assignments/assignment7/index.html"><img src="assignment7pic.jpg" alt="assignment 7"></a></div>
+            <div class="inner-box">In this assignment we focus on using java script to show multiple examples
+                using arrays, if statements, for loops and more to use the user's input and sort the data in specific ways. In example two,
+                I take a input from the user and use it to reach a donation goal.
+            </div>
         </div>
     </div>
 
