--- a/index.html
+++ b/index.html
@@ -88,6 +88,31 @@
         </div>
     </div>
 
+    <div class="box">
+        <div class="inner-box">   
+             <a href ="assignments/assignment8/index.html"><h4>Assignment 6</h4></a>
+        </div>
+        <div class="inner-box"> <a href ="assignments/assignment8/index.html"><img src="assignment8pic.png" alt="assignment 8"></a></div>
+        <div class="inner-box">In assignment 8, I learn to use functions and loops ind order to move a stick man across the screen while walking and running.
+                                I also make it so people can fill up a donation box without it resetting after each donation.
+        </div>
+
+
+    </div>
+
+    <div class="box">
+        <div class="inner-box">   
+             <a href ="assignments/wireframe/index.html"><h4>WireFrame</h4></a>
+        </div>
+        <div class="inner-box"> <a href ="assignments/wireframe/index.html"><img src="wireframepic.png" alt="Wire Frame"></a></div>
+        <div class="inner-box">In this assignment I learn to use wire frame to plan out my future website for my project,</div>
+
+
+    </div>
+
+
+
+
 
 
     </div>
