--- a/index.html
+++ b/index.html
@@ -82,17 +82,16 @@
             </div>
             <div class="inner-box"> <a href ="assignments/assignment7/index.html"><img src="assignment7pic.jpg" alt="assignment 7"></a></div>
             <div class="inner-box">In this assignment we focus on using java script to show multiple examples
-                using arrays, if statements, for loops and more to use the user's input and sort the data in specific ways. In example two,
-                I take a input from the user and use it to reach a donation goal.
+                using arrays, if statements and for loops.
             </div>
         </div>
-    </div>
+    
 
     <div class="box">
         <div class="inner-box">   
              <a href ="assignments/assignment8/index.html"><h4>Assignment 8</h4></a>
         </div>
-        <div class="inner-box"> <a href ="assignments/assignment8/index.html"><img src="assignment8pic.png" alt="assignment 8"></a></div>
+        <div class="inner-box"> <a href ="assignments/assignment8/index.html"><img src="assignment8pic.jpg" alt="assignment 8"></a></div>
         <div class="inner-box">In assignment 8, I learn to use functions and loops ind order to move a stick man across the screen while walking and running.
                                 I also make it so people can fill up a donation box without it resetting after each donation.
         </div>
@@ -104,12 +103,12 @@
         <div class="inner-box">   
              <a href ="assignments/wireframe/index.html"><h4>WireFrame</h4></a>
         </div>
-        <div class="inner-box"> <a href ="assignments/wireframe/index.html"><img src="wireframepic.png" alt="Wire Frame"></a></div>
+        <div class="inner-box"> <a href ="assignments/wireframe/"><img src="wireframepic.jpg" alt="Wire Frame"></a></div>
         <div class="inner-box">In this assignment I learn to use wire frame to plan out my future website for my project,</div>
 
 
     </div>
-
+</div>
 
 
 
