--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <div class="inner-box">   
              <a href ="assignments/wireframe/index.html"><h4>WireFrame</h4></a>
         </div>
-        <div class="inner-box"> <a href ="assignments/wireframe/"><img src="wireframepic.jpg" alt="Wire Frame"></a></div>
+        <div class="inner-box"> <a href ="assignments/wireframe/index.html"><img src="wireframepic.jpg" alt="Wire Frame"></a></div>
         <div class="inner-box">In this assignment I learn to use wire frame to plan out my future website for my project,</div>
 
 
