--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <h1>CSCE 242: Client-Server Computing</h1>
         </div>
         <h1>Assignments</h1>
+        <a href="myproj.html"><h4>Click for my Project</h4></a>
     </div>
 
   
@@ -104,7 +105,16 @@
              <a href ="assignments/wireframe/index.html"><h4>WireFrame</h4></a>
         </div>
         <div class="inner-box"> <a href ="assignments/wireframe/index.html"><img src="wireframepic.jpg" alt="Wire Frame"></a></div>
-        <div class="inner-box">In this assignment I learn to use wire frame to plan out my future website for my project,</div>
+        <div class="inner-box">In this assignment I learn to use wire frame to plan out my future website for my project.</div>
+
+
+    </div>
+    <div class="box">
+        <div class="inner-box">   
+             <a href ="assignments/assignment9/index.html"><h4>Assignment 9</h4></a>
+        </div>
+        <div class="inner-box"> <a href ="assignments/assignment9/index.html"><img src="assign9.png" alt="Assignment 9"></a></div>
+        <div class="inner-box">In this assignment I learn to use arrays to make quotes appear and to make a rainbow with a pot of gold</div>
 
 
     </div>
