--- a/project/part3/moretrain.html
+++ b/project/part3/moretrain.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Project Part 2 HTML and CSS</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles2.css">
     <script src="script.js"></script>
 
 </head>
@@ -11,11 +11,11 @@
 <body>
     <header>
         <div class="logo-head">
-            <img src="https://place-hold.it/100x100/FFF">
+            <a href="index.html"> <img src="pictures/vaultlogo.jpg" id="vault"> </a>
         </div>
 
         <div class="title">
-            <h1 >The Vault</h1>
+            <a href="index.html">  <h1 >The Vault</h1></a>
         </div>
 
         <div class="info">
@@ -45,18 +45,19 @@
             <li><a href="contact.html">Contact Us</a></li>
             <li><a href="healthfitness.html">Health and Fitness</a></li>
             <li><a href="review.html">Review Us</a></li>
+
         </ul>
     </nav>
 
 
-    <content>
+    <content class="container-head">
 
         <div class="box">
             <h1>Swim Class</h1>
             <h4>
                 Here you can learn to swim, take enderance swimming classes that range from new to advance.
             </h4>
-            <img src="https://place-hold.it/100x100/FFF">
+            <img src="pictures/swimtrain.jpg" id="train">
         </div>
 
         <div class="box">
@@ -64,7 +65,7 @@
             <h4>
                 Here in this class can you can learn all the fundamentals of weightings and powerlifting, which range from new to advanced.
             </h4>
-            <img src="https://place-hold.it/100x100/FFF">
+            <img src="pictures/irontrain.jpg" id="train">
         </div>
 
         <div class="box">
@@ -73,7 +74,7 @@
                 In this class you will learn a variety of different dances, dance styles and more. 
                 This includes new to advance classes and we reccomend you bring a friend!
             </h4>
-            <img src="https://place-hold.it/100x100/FFF">
+            <img src="pictures/dancetrain.jpg" id="train">
         </div>
 
     </content>
@@ -81,7 +82,7 @@
 
     <footer>
         <div class="logo-footer">
-            <img src="https://place-hold.it/100x100/FFF">
+            <a href="index.html"> <img src="pictures/vaultlogo.jpg" id="vault"> </a>
         </div>
        
         <div class="contact">
