--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h1>CSCE 242: Client-Server Computing</h1>
         </div>
         <h1>Assignments</h1>
-        <a href="myproj.html"><h4>Click for my Project</h4></a>
+        <a href="myproj.html" id="transfer"><h4>Click for my Project</h4></a>
     </div>
 
   
@@ -115,6 +115,17 @@
         </div>
         <div class="inner-box"> <a href ="assignments/assignment9/index.html"><img src="assign9.png" alt="Assignment 9"></a></div>
         <div class="inner-box">In this assignment I learn to use arrays to make quotes appear and to make a rainbow with a pot of gold</div>
+
+
+    </div>
+
+
+    <div class="box">
+        <div class="inner-box">   
+             <a href ="assignments/assignment10/index.html"><h4>Assignment 10</h4></a>
+        </div>
+        <div class="inner-box"> <a href ="assignments/assignment10/index.html"><img src="assign10.png" alt="Assignment 10"></a></div>
+        <div class="inner-box">In this assignment I learn to use a class of toys to display their information when hovering</div>
 
 
     </div>
