--- a/myproj.html
+++ b/myproj.html
@@ -16,22 +16,49 @@
             <h1>CSCE 242: Client-Server Computing</h1>
         </div>
         <h1>My Project</h1>
-        <a href="index.html"><h4>Click for Assignments</h4></a>
+        <a href="index.html" id="transferp"><h4>Click for Assignments</h4></a>
     </div>
 
   
         <div id="container">
             <div class="box">
                 <div class="inner-box">   
-                     <a href ="project/part2/index.html"><h4>Part One Project Home Page</h4></a>
+                     <a href ="project/projectpdf/index.html"><h4>Part One The Plan</h4></a>
                 </div>
-                <div class="inner-box"> <a href ="project/part2/index.html"> <img src="projectp1.png" alt="Project Part1"></a></div>
-                <div class="inner-box">Using HTML and CSS to develop part 1 of webpage</div>
+                <div class="inner-box"> <a href ="project/projectpdf/index.html"> <img src="projectpdf.png" alt="Project Part 1"></a></div>
+                <div class="inner-box">In this first stage of my project I am making a plan for my project which is about what 
+                    information I will need for my website.</div>
             </div>
 
 
 
+            <div class="box">
+                <div class="inner-box">   
+                     <a href ="assignments/wireframe/index.html"><h4>Part Two WireFrame</h4></a>
+                </div>
+                <div class="inner-box"> <a href ="assignments/wireframe/index.html"> <img src="wireframepic.jpg" alt="Project Part 2"></a></div>
+                <div class="inner-box">In this part of the project, I am developing a plan/prototype for our my website will look</div>
+            </div>
 
+
+
+            <div class="box">
+                <div class="inner-box">   
+                     <a href ="project/part2/index.html"><h4>Part Three Project Home Page</h4></a>
+                </div>
+                <div class="inner-box"> <a href ="project/part2/index.html"> <img src="projectp1.png" alt="Project Part1"></a></div>
+                <div class="inner-box">Using HTML and CSS to develop part 1 and 2 of webpage</div>
+            </div>
+
+
+
+            <div class="box">
+                <div class="inner-box">   
+                     <a href ="project/part3/index.html"><h4>Part Four Project Home Page</h4></a>
+                </div>
+                <div class="inner-box"> <a href ="project/part3/index.html"> <img src="part4.png" alt="Project Part 4"></a></div>
+                <div class="inner-box">In this part of the project, we are making the wabpage appear elegant.</div>
+            </div>
 
         </div>
 
@@ -39,7 +66,7 @@
 
 
 
-    </div>
+    
     </content>
 
     
