--- a/myproj.html
+++ b/myproj.html
@@ -60,6 +60,18 @@
                 <div class="inner-box">In this part of the project, we are making the wabpage appear elegant.</div>
             </div>
 
+            <div class="box">
+                <div class="inner-box">   
+                     <a href ="project/part4/index.html"><h4>Part Five Project Home Page</h4></a>
+                </div>
+                <div class="inner-box"> <a href ="project/part4/index.html"> <img src="part5.png" alt="Project Part 5"></a></div>
+                <div class="inner-box">In this part of the project, we are adding data forms, contact through email and iframes.</div>
+            </div>
+
+
+
+
+
         </div>
 
 
