--- a/project/part5/moretrain.html
+++ b/project/part5/moretrain.html
@@ -2,9 +2,9 @@
 <html lang="en">
 
 <head>
-    <title>Project Part 2 HTML and CSS</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="script.js"></script>
+    <title>Project Part 5</title>
+    <link rel="stylesheet" href="styles3.css">
+    <script src="script3.js"></script>
 
 </head>
 
