--- a/project/part5/review.html
+++ b/project/part5/review.html
@@ -44,15 +44,44 @@
             <li><a href="about.html">About Us</a></li>
             <li><a href="contact.html">Contact Us</a></li>
             <li><a href="healthfitness.html">Health and Fitness</a></li>
-            <li><a href="review.html">Review Us</a></li>
+            <li><a href="review.html"><strong>Review Us</strong></a></li>
 
         </ul>
     </nav>
 
 
     <content>
-        <div id="class-container" class="class-container"></div>
-      </content>
+        <div class="reviews">
+            <div class="contact-header">
+                <h2>Do you have any questions? Ask Below!</h2>
+            </div>
+            <div class="contact-box">
+
+                <div id="concern-info">
+                <label for="subject">Subject: </label>
+                <input type="text" id="subject"/>
+                <label for="Rating">Rating: </label>
+                <input type="number" id="Rating"/>
+                <br>
+                <button id="add-comment-button">Submit!</button>
+                <!-- reference assignment 6 -->
+                </div>
+            <div>
+            <input type="text" id="concerns2"/>
+        </div>
+        </div>
+    </div>
+    <div class="reviews">
+        <div class="contact-header">
+            <h2>Latest Review!</h2>
+        </div>
+        <div class="contact-box">
+            <label for="concern3">Reviews: </label>
+            <input type="text" id="concerns3"/>
+        </div>
+    </div>
+
+    </content>
 
 
     <footer>
