--- a/myproj.html
+++ b/myproj.html
@@ -73,7 +73,7 @@
                 <div class="inner-box">   
                      <a href ="project/part5/index.html"><h4>Part Six Project Home Page</h4></a>
                 </div>
-                <div class="inner-box"> <a href ="project/part5/index.html"> <img src="./project/part5/pic6.png" alt="Project Part 6"></a></div>
+                <div class="inner-box"> <a href ="project/part5/index.html"> <img src="pic6.png" alt="Project Part 6"></a></div>
                 <div class="inner-box">In this part of the project, we are using json instead of hardcoding.</div>
             </div>
 
