--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@
         <div class="inner-box">   
              <a href ="https://node-assignment13.onrender.com/"><h4>Assignment 13</h4></a>
         </div>
-        <div class="inner-box"> <a href ="https://hello-world-8mel.onrender.com/"><img src="assign13.png" alt="Assignment 13"></a></div>
-        <div class="inner-box"> <a href ="https://hello-world-8mel.onrender.com/">Live Demo</a></div>
+        <div class="inner-box"> <a href ="https://node-assignment13.onrender.com/"><img src="assign13.png" alt="Assignment 13"></a></div>
+        <div class="inner-box"> <a href ="https://node-assignment13.onrender.com/">Live Demo</a></div>
         <div class="inner-box"> <a href ="https://github.com/Tyler987/node-assignment13">Repo</a></div>
 
 
