--- a/myproj.html
+++ b/myproj.html
@@ -77,6 +77,14 @@
                 <div class="inner-box">In this part of the project, we are using json instead of hardcoding.</div>
             </div>
 
+            <div class="box">
+                <div class="inner-box">   
+                     <a href ="https://project6-final.onrender.com/"><h4>FINAL PROJECT HOME PAGE</h4></a>
+                </div>
+                <div class="inner-box"> <a href ="https://project6-final.onrender.com/"> <img src="finalprj.png" alt="Final Project"></a></div>
+                <div class="inner-box">Final Project</div>
+            </div>
+
 
         </div>
 
