--- a/project/part5/contact.html
+++ b/project/part5/contact.html
@@ -4,7 +4,7 @@
 <head>
     <title>Project Part 2 HTML and CSS</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="script.js"></script>
+    <script src="contact.js"></script>
 
 </head>
 
