--- a/myproj.html
+++ b/myproj.html
@@ -82,7 +82,9 @@
                      <a href ="https://project6-final.onrender.com/"><h4>FINAL PROJECT HOME PAGE</h4></a>
                 </div>
                 <div class="inner-box"> <a href ="https://project6-final.onrender.com/"> <img src="finalprj.png" alt="Final Project"></a></div>
-                <div class="inner-box">Final Project</div>
+
+                <div class="inner-box"> <a href ="https://project6-final.onrender.com/">Live Demo</a></div>
+                <div class="inner-box"> <a href ="https://github.com/Tyler987/project6-final">Repo</a></div>
             </div>
 
 
